# OxyChat

./: .gitignore  OxyChat.pro  global.cpp  global.h  httpmanager.cpp  httpmanager.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  resource.qrc  singleton.h  timerbtn.cpp  timerbtn.h
.qtcreator/: OxyChat.pro.user.58cd6c5  OxyChat.pro.user.de956bd
ChatServer/: ChatServer.cpp  IOContextPool.cpp  LogicSystem.h  MainServer.cpp  MainServer.h  Session.h  config.ini
Client/: OxyChat.pro  global.cpp  global.h  httpmanager.cpp  httpmanager.h  logindialog.cpp  logindialog.h  mainwindow.h  package-lock.json  registerdialog.cpp  resetdialog.ui  tcpmanager.cpp  tcpmanager.h
GateServer/: CMakeLists.txt  ConfigManager.cpp  HttpConnection.cpp  HttpConnection.h  IOContextPool.h  LogicSystem.cpp  MainServer.cpp  MainServer.h  MySQLDao.cpp  RPCConnectPool.cpp  RPCConnectPool.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  configmanager.cpp  configmanager.h  cserver.cpp  cserver.h  global.h  httpconnection.cpp  httpconnection.h  iocontextpool.cpp  iocontextpool.h  logicsystem.cpp  logicsystem.h  main.cpp  mainserver.cpp  mainserver.h  message.grpc.pb.cc  message.grpc.pb.h  message.proto  mysqlconnectpool.cpp  mysqlconnectpool.h  mysqldao.cpp  mysqldao.h  mysqlmanager.cpp  mysqlmanager.h  (+10 more)
StatusServer/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Global.h  IOContextPool.h  MySQLConnectPool.cpp  MySQLConnectPool.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RPCConnectPool.cpp  RPCConnectPool.h  RedisConnectPool.cpp  RedisManager.cpp  RedisManager.h  SegmentTree.h  StatusGrpcClient.cpp  StatusGrpcClient.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  message.proto
VerifyServer/: config.json  package-lock.json  package.json  redis.js  server.js  test_email.js
style/: stylesheet.qss
